--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 body {
   background-color: theme(colors.zinc.900);
+  /* background-color: theme(colors.black); */
   color: theme(colors.zinc.50);
 
   --square-size: min(100vw, 100vh);
